# routrace-data

./: .gitignore  CLAUDE.md  README.md  group-spec.md  pyproject.toml  spec.md
.github/workflows/: deploy.yml  test.yml
scripts/: coastline.py  config.py  highway.py  main.py  osm_downloader.py  osm_parser.py  overpass.py  simplify.py
tests/: test_detect_group.py  test_highway_grouping.py  test_main.py  test_osm_parser.py
